# quadrature

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
quadrature-decoder/: CHANGELOG.md  Cargo.toml  README.md
quadrature-decoder/examples/: incremental.rs  indexed_incremental.rs
quadrature-decoder/src/: decoder.rs  index_decoder.rs  lib.rs  state_transducer.rs  validator.rs
quadrature-decoder/src/decoder/: incremental.rs  indexed.rs  linear.rs  quadrature.rs  rotary.rs
quadrature-decoder/src/state_transducer/: full_step.rs  half_step.rs  quad_step.rs
quadrature-encoder/: CHANGELOG.md  Cargo.toml  README.md
quadrature-encoder/examples/: linear.rs  linear_async.rs  linear_eh0.rs  rotary.rs  rotary_async.rs  rotary_eh0.rs
quadrature-encoder/src/: encoder.rs  lib.rs  mode.rs  traits.rs
quadrature-encoder/src/encoder/: incremental.rs  indexed.rs  linear.rs  rotary.rs
quadrature-encoder/src/mode/: linear.rs  rotary.rs
src/: decoder.rs  lib.rs  state_transducer.rs
src/decoder/: quadrature.rs
src/state_transducer/: full_step.rs  half_step.rs  quad_step.rs
