[package]
name = "quadrature-decoder"
description = "Pure logic-level implementations of quadrature decoders with support for full-, half- an quad-stepping."
keywords = ["quadrature-decoder"]
categories = ["embedded", "no-std"]

repository = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = { workspace = true }
