[package]
name = "quadrature-encoder"
description = "Hardware-level implementations of drivers for incremental encoders with support for full-, half- an quad-stepping."
keywords = ["quadrature-encoder", "incremental-encoder", "rotary-encoder", "linear-encoder"]
categories = ["embedded", "no-std"]

repository = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = { version = "1.0.0" }
num-traits = { workspace = true }
quadrature-decoder = { version = "0.1.0", path = "../quadrature-decoder", default-features = false }

[dev-dependencies]
embedded-hal-mock = { version = "0.11.0", features = ["eh1"] }
