[package]
name = "quadrature-encoder"
description = "Hardware-level implementations of drivers for incremental encoders with support for full-, half- an quad-stepping."
keywords = ["quadrature-encoder", "incremental-encoder", "rotary-encoder", "linear-encoder"]
categories = ["embedded", "no-std"]

repository = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eh1 = { package = "embedded-hal", version = "1.0", optional = true }
eh0 = { package = "embedded-hal", version = "0.2.7", features = ["unproven"], optional = true }
embedded-hal-async = { version = "1.0", optional = true }
num-traits = { workspace = true }
quadrature-decoder = { version = "0.1.1", path = "../quadrature-decoder", default-features = false }
futures = { version = "0.3.31", default-features = false, optional = true }
embassy-futures = "0.1.1"

[dev-dependencies]
embedded-hal-mock = { version = "0.11.0", features = ["eh0","eh1","embedded-hal-async"] }

[features]
eh1 = ["dep:eh1"] # use Pin traits from embedded-hal v1.0.0
eh0 = ["dep:eh0"] # use Pin traits from embedded-hal v0.2.7
async = ["dep:embedded-hal-async", "dep:futures"] # enables poll_async(). requires Wait trait for pins, such as those wrapped by ExtInt<EicPin<...>>.
default = ["eh1"]
